<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/size_2"
    android:layout_marginRight="@dimen/size_2"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="#fff"
    card_view:cardCornerRadius="@dimen/size_5"
    card_view:cardElevation="@dimen/size_2"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_4">

        <ImageView
            android:id="@+id/image_rst"
            android:layout_width="@dimen/size_60"
            android:layout_height="@dimen/size_60"
            android:layout_gravity="center"
            android:contentDescription="@string/featured_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_restaurant_black_24dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_rst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/name"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/image_rst"
            card_view:layout_constraintTop_toTopOf="@+id/image_rst" />

        <TextView
            android:id="@+id/locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/locality"
            android:textColor="@color/colorPrimaryDark"
            android:maxLines="1"
            android:textSize="@dimen/text_6"
            card_view:layout_constraintStart_toStartOf="@+id/cost_avg"
            card_view:layout_constraintTop_toBottomOf="@+id/cost_avg" />

        <TextView
            android:id="@+id/cost_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/avg_cost"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_6"
            card_view:layout_constraintStart_toStartOf="@+id/name_rst"
            card_view:layout_constraintTop_toBottomOf="@+id/name_rst" />

        <TextView
            android:id="@+id/rst_cuisines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cuisines"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_6"
            card_view:layout_constraintStart_toStartOf="@+id/locality"
            card_view:layout_constraintTop_toBottomOf="@+id/locality" />

        <RatingBar
            android:id="@+id/rst_rating"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:layout_constraintStart_toStartOf="@+id/rst_cuisines"
            card_view:layout_constraintTop_toBottomOf="@+id/rst_cuisines" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
