<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/surface_bg">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/reply_white_50"
        android:layout_marginTop="104dp"
        android:text="@string/how_was_your_date_nrate_it_on_scale_of_5"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/rate_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/RatingScale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/quantum_white_100"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/awesome_i_love_it"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/rate_now"
        app:layout_constraintStart_toStartOf="@+id/rate_now"
        app:layout_constraintTop_toBottomOf="@+id/rate_now" />

    <Button
        android:id="@+id/rate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@+id/RatingScale"
        app:layout_constraintStart_toStartOf="@+id/RatingScale"
        app:layout_constraintTop_toBottomOf="@+id/RatingScale" />
</androidx.constraintlayout.widget.ConstraintLayout>